# OpenGL-Learn

./: CMakeLists.txt  README.md  materials.json  meson.build
.cache/clangd/index/: window.cpp.30ACC513FBF423F0.idx  window.cpp.400708DB9C8BAB60.idx
assets/: learn-open-gl.mov
include/: Camera.h  ElementBuffer.h  Shader.h  Texture.h  VertexBuffer.h
shaders/: 3.3.shader.glsl  4.1.fragment.glsl  4.1.shader.glsl  object.fragment.glsl  vertex.glsl
src/: Camera.cpp  ElementBuffer.cpp  Shader.cpp  Texture.cpp  VertexBuffer.cpp  main.cpp  triangle.cpp  window.cpp
